[package]
name = "wikipedia-data-analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
dotenvy = "0.15.7"
envy = "0.4.2"
hex = "0.4.3"
mysql = "28.0.0"
serde = "1.0.228"

sqlx = { version = "0.8", features = [ "runtime-tokio", "mysql", "chrono" ] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"]}
